fix: extra space on webkit browsers

--- a/src/scss/custom/_forms.scss
+++ b/src/scss/custom/_forms.scss
@@ -116,6 +116,12 @@ textarea {
   }
 }
 
+input[type='date'],
+input[type='datetime-local'],
+input[type='time'] {
+  display: flex;
+}
+
 textarea {
   border: 1px solid $input-border;
   height: auto;
